@@ -15,8 +15,8 @@
  */
 package org.factcast.core.lock;
 
+import java.io.Serial;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.Getter;
 import lombok.NonNull;
 import org.factcast.core.Fact;
@@ -24,7 +24,7 @@ import org.factcast.core.util.FactCastJson;
 
 public final class ExceptionAfterPublish extends IllegalStateException {
 
-  private static final long serialVersionUID = 1L;
+  @Serial private static final long serialVersionUID = 1L;
 
   @Getter @NonNull private final List<Fact> publishedFacts;
 
@@ -40,7 +40,6 @@ public final class ExceptionAfterPublish extends IllegalStateException {
   }
 
   private static String render(@NonNull List<Fact> publishedFacts) {
-    return FactCastJson.writeValueAsString(
-        publishedFacts.stream().map(Fact::id).collect(Collectors.toList()));
+    return FactCastJson.writeValueAsString(publishedFacts.stream().map(Fact::id).toList());
   }
 }
